# mlwm-deployment

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: image.yml  pytest.yml
configurations/gefion1_FakeDINI+FakeIFS/: config.yaml  datastore.yaml
configurations/surface-dummy-model_DINI/: .gitignore  Containerfile  DEVELOPING.md  README.md  build_image.sh  entry.sh  pyproject.toml
configurations/surface-dummy-model_DINI/src/: create_inference_dataset.py  run_inference.py
src/mlwm/: build_inference_artifact.py  create_forecast_inference_dataset.py  paths.py  run_models.py
src/mlwm/tests/: test_paths.py
